# prefect_deploy_test

./: .env  .prefectignore  README.md  basic_favorite-deployment.yaml  pyproject.toml
src/: basic_flow.py
src/blocks/: fs_storage.py
