[tool.poetry]
name = "test_prefect"
version = "0.1.0"
authors = ["mahiki <mahiki@users.noreply.github.com>"]
description = "A bare prefect repo to test deployment features"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.7"
pathlib = "^1.0.1"
greenlet = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
